--- a/user.css
+++ b/user.css
@@ -371,7 +371,7 @@ PLAYLIST PAGE
   display: none;
 }
 .playlist-playlist-playlistContent {
-  background: none;
+  background: none !important;
 }
 span.ButtonInner-sc-14ud5tc-0.dpREpp.encore-bright-accent-set,
 .Root__top-bar span.ButtonInner-sc-14ud5tc-0.kWONUS.encore-bright-accent-set {
