hide artist page bg

--- a/user.css
+++ b/user.css
@@ -455,7 +455,7 @@ h1.Type__TypeElement-goli3j-0.beQQox {
   --column-count: 7 !important;
 }
 .artist-artistOverview-artistOverviewContent {
-  background: none;
+  background: none !important;
 }
 /*
 -------------------
