--- a/user.css
+++ b/user.css
@@ -531,10 +531,15 @@ HOME POPUP
   width: 100%;
   height: 200px;
 }
-.main-trackCreditsModal-mainSection {
+div[aria-label="Galaxy Settings"] .main-trackCreditsModal-mainSection {
   overflow-y: hidden;
   padding: 24px;
 }
 .main-trackCreditsModal-originalCredits {
   padding-bottom: 0;
+}
+
+.main-userWidget-dropDownMenu li.main-contextMenu-menuItem > div {
+  left: calc(225px + 185px) !important;
+  width: 225px;
 }
